# fastapi-saas-starter

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  docs.md  example.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2da523c120f7_added_plans_and_subscription_table_.py  aa22ec5f6271_add_admin_audit_logs.py
requirements/: requirements.txt
src/: auth_bearer.py  config.py  logging.py  main.py  paginate.py
src/admin/: ai_repo.py  ai_settings.py  ai_utils.py  ai_vars.py  config.py  dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
src/auth/: config.py  dependencies.py  emails.py  models.py  router.py  schemas.py  service.py
src/billing/: dependencies.py  models.py  repository.py  router.py  service.py  stripe_gateway.py  tasks.py
src/common/: enums.py
src/settings/: app.py  celery.py  database.py  mail.py  redis.py  stripe.py
static/admin/: admin.js  login.js
tests/auth/: api_test.py  conftest.py  unit_test.py
tests/billing/: api_test.py  conftest.py  unit_test.py
