[project]
name = "fastapi-saas-starter"
version = "0.1.0"
description = "FastAPI backend providing auth, OAuth, OTP, email verification, and Stripe-based subscriptions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.13",
    "alembic>=1.17.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.3.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "celery>=5.5.3",
    "redis>=5.2.1",
    "fastapi-mail>=1.5.8",
    "stripe>=14.0.1",
    "openai>=2.15.0",
    "slowapi>=0.1.9",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "Jinja2>=3.1.6",
    "PyYAML>=6.0.3",
    "asgiref>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
